--- a/api/package.json
+++ b/api/package.json
@@ -30,5 +30,6 @@
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
     "supertest-session": "^4.1.0"
-  }
+  },
+  "proxy":"http://localhost:3001"
 }
