--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,10 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +40,4 @@
       "last 1 safari version"
     ]
   }
-  
-  
 }
